// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tag Default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 16px 8px;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Disabled Size 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 16px 8px;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "marginTop": "20px",
    }
  }
>
  Those two should have the same width
  <div
    className="c0"
    disabled={true}
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
  <div
    className="c1"
    type="SECONDARY"
  >
    THIS IS A TAG
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Empty tag 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  />
</div>
`;

exports[`Storyshots Tag Multiple tags 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c4:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c4 .icon {
  padding-right: 8px;
}

.c4 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c4:hover .close-icon,
.c4:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c4:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c4:hover .close-icon,
.c4:focus .close-icon {
  color: white;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 16px 8px;
}

.c3:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c3 .icon {
  padding-right: 8px;
}

.c3 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c3:hover .close-icon,
.c3:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c3:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c3:hover .close-icon,
.c3:focus .close-icon {
  color: white;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 16px 8px;
}

.c2:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c2 .icon {
  padding-right: 8px;
}

.c2 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c2:hover .close-icon,
.c2:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c2:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c2:hover .close-icon,
.c2:focus .close-icon {
  color: white;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    Aug 16, 2018
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
  <div
    className="c0"
    type="SECONDARY"
  >
    This is a long removable tag
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
  <div
    className="c1"
    type="NEUTRAL"
  >
    Neutral tag
  </div>
  <div
    className="c2"
    disabled={true}
    type="SECONDARY"
  >
    Disabled tag
  </div>
  <div
    className="c3"
    disabled={true}
    type="SECONDARY"
  >
    Disabled removable
  </div>
  <div
    className="c4"
    type="SECONDARY"
  >
    And that's an even bigger and wider not removable tag
  </div>
</div>
`;

exports[`Storyshots Tag Neutral 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="NEUTRAL"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Neutral removable 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="NEUTRAL"
  >
    You can remove this tag
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    You can remove this tag
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
  background-color: rgba(0,0,0,0.32);
  pointer-events: none;
  padding: 6px 16px 8px;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    disabled={true}
    type="SECONDARY"
  >
    You can remove this tag. NOT!
  </div>
</div>
`;

exports[`Storyshots Tag Removable with icon 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    <div
      className="icon"
    >
      <i
        className="wg-order"
      />
    </div>
    Tag with icon
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable with value 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    Removable Tag #1
    <div
      className="close-icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag With children 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    <div
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <img
        alt="picsum"
        src="https://picsum.photos/200?image=0"
        style={
          Object {
            "width": "8px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag With icon 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  padding-right: 8px;
}

.c0 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .close-icon,
.c0:focus .close-icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    <div
      className="icon"
    >
      <i
        className="wg-order"
      />
    </div>
    Tag with icon
  </div>
</div>
`;

exports[`Storyshots Tag extended style 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c0 {
  background: chartreuse;
  color: magenta;
  border: inset 4px skyblue;
  border-radius: 16px;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0 c1"
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;
